languages/montiarc-fe/src/test/resources/automaton/valid/C.arc
package automaton.valid;

component C {

  port
    in Integer i,
    out Integer o;

}